--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 </head>
 
 <body>
+    <!-- -------header section start-------- -->
     <header class="header-area">
         <div class="container">
             <nav>
-
+                <i class="navbar fas fa-bars"></i>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#club">Club</a></li>
-                    <li><a href="#world Cup 2023">World Cup 2023</a></li>
-                    <li><a href="#upcoming Matchs">Upcoming Matchs</a></li>
+                    <li><a href="#player">Players</a></li>
+                    <li><a href="#world Cup 2023">Live</a></li>
+                    <li><a href="#upcoming Matchs">Ranking</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="button">
-                    <button class="btn">[<i class="fas fa-arrow-left"></i> &nbsp Sign up</button>
                     <button><i class="fas fa-arrow-right"></i>] &nbsp Log in</button>
                 </div>
             </nav>
@@ -42,7 +42,11 @@
             </div>
         </div>
     </header>
+    <!-- -------header section end-------- -->
+    <!-- -------main section start-------- -->
     <main>
+        <!-- -------players section start-------- -->
+
         <section class="top-players container">
             <h1>Top 12 player list</h1>
             <div class="plyer-group">
@@ -129,7 +133,8 @@
 
             </div>
         </section>
-
+        <!-- -------player section end-------- -->
+        <!-- -------Team section start-------- -->
         <section class="top-team">
             <h1>Best football teams 2021</h1>
             <div class="best-team">
@@ -146,10 +151,10 @@
                     </div>
                 </div>
                 <div class="team container">
-                    <div class="team-img after-m">
+                    <div class="team-img after-content">
                         <img src="images/webimage-CONMEBOL-Qualifiers-for-Russia-2021-Brazil-Colombia.png" alt="">
                     </div>
-                    <div class="team-content">
+                    <div class="team-content before-img">
                         <h2>BRAZIL</h2>
                         <p>The men's FIFA World Ranking is a ranking system for men's national teams in association
                             football, currently led by Belgium. Theteams of the men's member nations of FIFA, football's
@@ -159,10 +164,9 @@
                 </div>
             </div>
         </section>
-        <section class="top-striker">
-
-        </section>
+        <!-- -------Team section end-------- -->
     </main>
+    <!-- -------header section end-------- -->
     <footer>
         <div class="container">
             <div class="logo">
